--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   path: ^1.9.0
   sqflite: ^2.3.3+1
   location: ^7.0.0
+  google_maps_flutter: ^2.7.0
+  http: ^1.2.1
 
 dev_dependencies:
   flutter_test:
